tests/backend/checkmach/fail2.output
File "fail2.ml", line 1, characters 26-35:
Error: Annotation check for noalloc_strict failed on function camlFail2__test_HIDE_STAMP
