tests/backend/checkmach/fail2.ml
let[@noalloc] test x = (x,x)
